Fix overflow for mardown areas

--- a/assets/css/components/_markdown.scss
+++ b/assets/css/components/_markdown.scss
@@ -17,7 +17,7 @@
 }
 
 .s-markdown {
-    overflow-x: auto;
+    overflow-x: hidden;
 
     a {
         &[href^='http'] {
